--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,9 @@
 safe: true
+url: http://tiesebarrell.github.io
+name : AirQuill
+tagline :  Presumptuous tagline goes here
+gems:
+ - jekyll-mentions
+ - jemoji
+ - jekyll-redirect-from
+ - jekyll-sitemap
