Setting up blog feeds.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,10 @@
 safe: true
 url: http://tiesebarrell.github.io
-name : AirQuill
-tagline :  Presumptuous tagline goes here
+name: AirQuill
+tagline:  Presumptuous tagline goes here
+author: 
+ - name: Tiese Barrell
+ - email: info@mazidea.com
 gems:
  - jekyll-mentions
  - jemoji
