Updated pygments setting to highlighter.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 safe: true
-pygments: true
+highlighter: pygments
 url: http://tiesebarrell.github.io
 name: AirQuill
 tagline:  Presumptuous tagline goes here
