--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 safe: true
 highlighter: pygments
-url: http://tiesebarrell.github.io
+url: http://airquill.io
 name: AirQuill
 tagline:  Presumptuous tagline goes here
 authorName: Tiese Barrell
@@ -11,3 +11,4 @@ gems:
  - jekyll-redirect-from
  - jekyll-sitemap
 markdown: kramdown
+excerpt_separator: <!--more-->
