updated post - added image

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ authorName: Tiese Barrell
 authorEmail: info@mazidea.com
 
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 
 safe: true
 gems:
