Added configuration for slugified permalinks.
* Added redirect configuration for existing links;
* Updated example post to redirect from original link;

--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,22 @@ authorEmail: info@mazidea.com
 
 markdown: kramdown
 highlighter: rouge
+permalink: /:categories/:year/:month/:day/:slug/
 
 safe: true
-gems:
+plugins:
  - jemoji
  - jekyll-redirect-from
  - jekyll-sitemap
 
+whitelist:
+- jekyll-redirect-from
+
 tagline:  Presumptuous tagline goes here
+
+kramdown:
+  parse_block_html: true
+
+exclude: [
+  gulpfile.js
+]
