--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {},
   "author": "Tiese Barrell",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.2",
     "@node-minify/cli": "^4.1.0",
     "@node-minify/cssnano": "^4.1.0",
+    "@node-minify/uglify-js": "^4.0.5",
     "bootstrap": "^4.3.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
     "less": "^3.9.0"
   }
 }
