--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@node-minify/uglify-js": "^4.0.5",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
+    "gulp": "^4.0.2",
     "jquery": "^3.4.1",
     "less": "^3.9.0"
   }
