--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ authorEmail: tiesebarrell@mazidea.com
 
 markdown: kramdown
 highlighter: rouge
-permalink: /:categories/:year/:month/:day/:slug/
+permalink: /:year/:month/:day/:slug/
 
 safe: true
 plugins:
